--- a/src/routes/_index/+page.marko
+++ b/src/routes/_index/+page.marko
@@ -3,10 +3,19 @@
     <img.logo src="./logo.svg" alt="Marko"/>
   </header>
   <main>
-    <p>Edit <code>./src/routes/_index/+page.marko</code> and save to reload.</p>
-    <a href="https://markojs.com/docs/getting-started">
-      Learn Marko
-    </a>
+    <h1>Welcome to Marko!</h1>
+    <color-picker colors=[
+      '#333745',
+      '#E63462',
+      '#FE5F55',
+      '#C7EFCF',
+      '#EEF5DB',
+      '#00B4A6',
+      '#007DB6',
+      '#FFE972',
+      '#9C7671',
+      '#0C192B'
+    ]/>
   </main>
 </div>
 <mouse-mask/>
